# Human-Detection-Module

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  DoxyConfig  LICENSE.txt  README.md
app/: CMakeLists.txt  cam.cpp  cascade.cpp  humanDetectCascade.xml  main.cpp  rectplot.cpp
docs/html/: annotated.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html
docs/html/d0/d4e/: app_2CMakeLists_8txt.html
docs/html/d0/de0/: classCam.html
docs/html/d2/de3/: test_2CMakeLists_8txt.html
docs/html/d2/df1/: rectplottest_8cpp.html  rectplottest_8cpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
docs/latex/: annotated.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex
include/: cam.hpp  cascade.hpp  rectplot.hpp
results/: cppcheck.txt  cpplint.txt
src/: CMakeLists.txt  cam.cpp  cascade.cpp  main.cpp  rectplot.cpp
test/: CMakeLists.txt  camtest.cpp  cascadetest.cpp  main.cpp  rectplottest.cpp
(+41 files in other folders)
